add habits filter dialog

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -12,6 +12,7 @@
     "contact": "Contact",
     "support": "Coffee",
     "equalize": "Equalize counters",
+    "filter": "Filter habits",
     "loading-habits": "Loading habits"
   },
   "settings": {
