--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -12,6 +12,7 @@
     "contact": "Kontakt",
     "support": "Kawusia",
     "equalize": "Wyrównaj liczniki",
+    "filter": "Filtruj nawyki",
     "loading-habits": "Ładowanie nawyków"
   },
   "settings": {
