enhance summary logic and UI fallback behavior

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -57,6 +57,8 @@
     "sent": "Sent",
     "offline": "Offline",
     "hints": "Hints",
+    "generate-summary": "Generate summary",
+    "try-again": "Try again",
     "generating": "Generating",
     "finish": "Finish"
   },
