--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -31,7 +31,11 @@
     "light": "Jasny",
     "notifications": "Powiadomienia",
     "enabled": "Włączone",
-    "disabled": "Wyłączone"
+    "disabled": "Wyłączone",
+    "test-connection": "Test połączenia",
+    "test": "Testuj",
+    "connection-ok": "Połączony",
+    "connection-fail": "Rozłączony"
   },
   "message": {
     "delete": "Czy na pewno chcesz usunąć nawyk:\n\n",
@@ -249,6 +253,7 @@
     ]
   },
   "summary": {
+    "error_reading": "Błąd odczytu wygenerowanego podsumowania.",
     "no_actions": "Tutaj pojawi się podsumowanie Twoich postępów. Najpierw wykonaj przynajmniej jedno powtórzenie wybranego nawyku.",
     "no_response": "Nie udało się wygenerować podsumowania. AI nie udzieliło odpowiedzi."
   },
