--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -41,14 +41,14 @@
     "delete": "Are you sure to remove the habit:\n\n",
     "equalize": "Do you want to subtract easy choices from right choices?",
     "contact": "Fill out the form to contact the app's author.",
-    "support": "Hey there! 👋\n\nI'm an independent developer who built this app with love and many cups of coffee ☕.\n\nIf you enjoy using it and want to help me keep improving it, consider buying me a coffee. It really means a lot!\n\n~ Mikołaj Bryksa"
+    "support": "Hey there! 👋\n\nI’m building Dooit on my own, with strong belief that it can truly improve everyday life. Every line of code was written to help you build habits that make a real difference.\n\nIf you feel that Dooit has supported you in some way, I’d appreciate it a lot if you contributed to its development - even with a virtual coffee. It’s a sign for me that what I’m doing matters.\n\n~ Mikołaj Bryksa"
   },
   "button": {
     "delete": "Delete",
     "cancel": "Cancel",
     "close": "Close",
     "contact": "Contact",
-    "support": "Buy",
+    "buy": "Buy",
     "save": "Save",
     "back": "Back",
     "next": "Next",
