update filter dialog

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -56,6 +56,7 @@
     "done": "Done",
     "equalize": "Equalize",
     "reset": "Reset",
+    "today": "Today",
     "unlock": "Unlock",
     "send": "Send",
     "sent": "Sent",
@@ -207,7 +208,6 @@
       "Progress, not perfection.",
       "Tiny habits, huge impact.",
       "Consistency creates results.",
-      "Today’s effort, tomorrow’s reward.",
       "Little effort, lasting change."
     ],
     "good": [
