--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -56,6 +56,7 @@
     "done": "Zrobione",
     "equalize": "Wyrównaj",
     "reset": "Reset",
+    "today": "Dzisiaj",
     "unlock": "Odblokuj",
     "send": "Wyślij",
     "sent": "Wysłano",
