change label font size

--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -213,7 +213,7 @@
     "good": [
       "Jeden nawyk pociąga za sobą kolejne.",
       "Udowadniasz swoją determinację.",
-      "Z każdym krokiem się zmieniasz",
+      "Z każdym krokiem się zmieniasz.",
       "Tak trzymaj, robisz postępy.",
       "Twoja dyscyplina się opłaca.",
       "Kolejna cegiełka w murze sukcesu.",
