--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -86,7 +86,7 @@
     "badCounter": "Easy choices",
     "skipCounter": "Skipped choices",
     "effectiveness": "Effectiveness",
-    "no_planned_repetitions": "No repetitions planned",
+    "noRepetitions": "No repetitions",
     "done": "All done today!",
     "start": "Start"
   },
@@ -259,9 +259,9 @@
     ]
   },
   "summary": {
-    "error_reading": "Error reading generated summary.",
-    "no_actions": "Your progress summary will appear here once you complete at least one repetition of your chosen habit.",
-    "no_response": "Failed to generate summary. AI has not provided a response."
+    "error-reading": "Error reading generated summary.",
+    "no-actions": "Your progress summary will appear here once you complete at least one repetition of your chosen habit.",
+    "no-response": "Failed to generate summary. AI has not provided a response."
   },
   "error": {
     "title": "Something went wrong",
