--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -38,7 +38,7 @@
     "connection-fail": "Rozłączony"
   },
   "message": {
-    "delete": "Czy na pewno chcesz usunąć nawyk:\n\n",
+    "delete": "Czy na pewno chcesz usunąć nawyk:",
     "contact": "Wypełnij formularz, aby skontaktować się z autorem aplikacji.",
     "support": "Cześć 👋\n\nTworzę Dooit samodzielnie, z dużą wiarą, że może realnie poprawiać codzienne życie. Każda linijka kodu powstała z myślą o tym, by pomóc Ci budować nawyki, które naprawdę coś zmieniają.\n\nJeśli czujesz, że Dooit już Ci w czymś pomógł, będzie mi ogromnie miło, jeśli wesprzesz dalszy rozwój tej aplikacji - choćby stawiając mi wirtualną kawę. To dla mnie sygnał, że to, co robię, ma sens.\n\n~ Mikołaj Bryksa"
   },
